--- a/sources/webapp/public/css/print.css
+++ b/sources/webapp/public/css/print.css
@@ -767,12 +767,13 @@ html {
     @footnote {
         border-top: 0.5pt solid black;
         padding-top: 0.5rem;
-        padding-left: 2rem;
+        padding-left: 1.75rem;
     }
 }
 
 footnote {
     float: footnote;
+    font-size: 0.8rem;
 }
 
 ::footnote-call {
@@ -783,7 +784,7 @@ footnote {
 
 ::footnote-marker {
     content: counter(footnote, decimal) ". ";
-    width: 1.5rem;
+    width: 1.25rem;
     text-align: right;
     position: absolute;
     left: 0;
@@ -845,7 +846,7 @@ footnote {
 /* Content */
 
 .content {
-    padding-left: 2rem;
+    padding-left: 1.75rem;
 }
 
 .content > * + * {
@@ -853,30 +854,27 @@ footnote {
     }
 
 .content .paragraph-nr {
-        width: 1.5rem;
-        text-align: center;
+        width: 1rem;
+        text-align: right;
         position: absolute;
         left: 0;
-        background: #EFEFEF;
-        border-radius: 9999999px;
-        font-size: 0.7rem;
-        padding: 0.15rem 0 0.05rem 0;
-        color: #575757;
+        font-size: 0.8rem;
+        color: #707070;
+        margin-top: 0.2rem;
     }
 
 .content h1, .content h2 {
         font-size: 1.2rem;
+        margin-top: 1.6rem;
         text-transform: uppercase;
     }
 
 .content h3 {
         font-size: 1.2rem;
+        margin-top: 1.2rem;
     }
 
 .content h4, .content h5, .content h6 {
+        margin-top: 1.1rem;
         font-size: 1.1rem;
-    }
-
-.content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
-        margin-top: 1.5rem;
     }
