--- a/sources/webapp/resources/css/print.css
+++ b/sources/webapp/resources/css/print.css
@@ -26,12 +26,13 @@ html {
     @footnote {
         border-top: 0.5pt solid black;
         padding-top: 0.5rem;
-        padding-left: 2rem;
+        padding-left: 1.75rem;
     }
 }
 
 footnote {
     float: footnote;
+    font-size: 0.8rem;
 }
 
 ::footnote-call {
@@ -42,7 +43,7 @@ footnote {
 
 ::footnote-marker {
     content: counter(footnote, decimal) ". ";
-    width: 1.5rem;
+    width: 1.25rem;
     text-align: right;
     position: absolute;
     left: 0;
@@ -98,32 +99,30 @@ footnote {
 /* Content */
 
 .content {
-    padding-left: 2rem;
+    padding-left: 1.75rem;
     > * + * {
         margin-top: 0.75rem;
     }
     .paragraph-nr {
-        width: 1.5rem;
-        text-align: center;
+        width: 1rem;
+        text-align: right;
         position: absolute;
         left: 0;
-        background: #EFEFEF;
-        border-radius: 9999999px;
-        font-size: 0.7rem;
-        padding: 0.15rem 0 0.05rem 0;
-        color: #575757;
+        font-size: 0.8rem;
+        color: #707070;
+        margin-top: 0.2rem;
     }
     h1, h2 {
         font-size: 1.2rem;
+        margin-top: 1.6rem;
         text-transform: uppercase;
     }
     h3 {
         font-size: 1.2rem;
+        margin-top: 1.2rem;
     }
     h4, h5, h6 {
+        margin-top: 1.1rem;
         font-size: 1.1rem;
-    }
-    h1, h2, h3, h4, h5, h6 {
-        margin-top: 1.5rem;
     }
 }
