--- a/sources/webapp/resources/css/print.css
+++ b/sources/webapp/resources/css/print.css
@@ -5,7 +5,7 @@
 
 @page {
     size: A4;
-    margin: 15mm 15mm 25mm 15mm;
+    margin: 20mm;
     @bottom-right {
         content: counter(page) " / " counter(pages);
         vertical-align: top;
@@ -57,6 +57,11 @@ footnote {
     > * + * {
         margin-top: 0.75rem;
     }
+    &-logo {
+        width: 60mm;
+        margin: 0 auto;
+        margin-bottom: 1.5rem;
+    }
     &-label {
         text-transform: uppercase;
         font-size: 1.2rem;
@@ -83,6 +88,7 @@ footnote {
 }
 
 .legal-text {
+    margin-bottom: 1.5rem;
     background-color: #f4e8d7;
     padding: 5mm;
     > * + * {
@@ -91,15 +97,33 @@ footnote {
 }
 
 .toc {
-    a::after {
-        content: target-counter(attr(href), page);
+    page-break-before: always;
+    margin-bottom: 1.5rem;
+    > * + * {
+        margin-top: 0.75rem;
+    }
+    &-label {
+        text-transform: uppercase;
+    }
+    &-list {
+        ul ul {
+            margin-left: 1rem;
+        }
+        a {
+            display: flex;
+            justify-content: space-between;
+            gap: 0.5rem;
+            &::after {
+                content: target-counter(attr(href), page);
+            }
+        }
     }
 }
 
 /* Content */
 
 .content {
-    padding-left: 1.75rem;
+    page-break-before: always;
     > * + * {
         margin-top: 0.75rem;
     }
@@ -107,7 +131,7 @@ footnote {
         width: 1rem;
         text-align: right;
         position: absolute;
-        left: 0;
+        left: -1.75rem;
         font-size: 0.8rem;
         color: #707070;
         margin-top: 0.2rem;
