--- a/sources/webapp/resources/views/print.antlers.html
+++ b/sources/webapp/resources/views/print.antlers.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="text-{{ text }}">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{{ config:app:url }}{{ mix src='css/print.css' }}">
