--- a/sources/webapp/resources/css/print.css
+++ b/sources/webapp/resources/css/print.css
@@ -10,7 +10,7 @@
         content: counter(page) " / " counter(pages);
         vertical-align: top;
         padding-top: 5mm;
-        font-size: 8pt;
+        font-size: 0.8rem;
     }
 }
 
@@ -18,6 +18,12 @@ html {
     font-size: 10pt;
     font-family: librecaslon, serif;
     line-height: 1.5;
+    &.text-md {
+        font-size: 10pt;
+    }
+    &.text-lg {
+        font-size: 12pt;
+    }
 }
 
 /* Footnotes */
