Fix search results localization

--- a/sources/webapp/resources/views/search.antlers.html
+++ b/sources/webapp/resources/views/search.antlers.html
@@ -64,7 +64,7 @@
                   </g>
                 </g>
               </svg>
-              {{ trans:previous }}
+              &nbsp;
             </a>
           </div>
           <div class="shrink-0 min-w-max">
@@ -72,7 +72,7 @@
           </div>  
           <div class="w-full flex justify-end">
             <a href="{{ next_page }}" class="flex items-center {{ !next_page ? 'opacity-30 pointer-events-none' : '' }}">
-              {{ trans:next }}
+              &nbsp;
               <svg class="inline-block ml-1" xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
                 <g id="Gruppe_51" data-name="Gruppe 51" transform="translate(10.5 -16.116) rotate(90)">
                   <g id="Icon_feather-arrow-up" data-name="Icon feather-arrow-up" transform="translate(16.822)">
