--- a/sources/webapp/resources/views/search.antlers.html
+++ b/sources/webapp/resources/views/search.antlers.html
@@ -35,10 +35,11 @@
                 <ul class="">
                 {{ results }}
                   {{ if content != '' }}
+                    {{ dump }}
                     <li class="flex max-md:flex-col max-md:gap-2 md:justify-between md:items-start border-t border-gray-400 py-4">
-                      <span class="md:flex md:w-3/12 text-xl font-serif">{{ title }}</span>
-                      <span class="md:flex md:w-6/12 text-sm text-gray-700">{{ content  | raw | bard_text | truncate:200 }}</span>
-                      <a class="max-md:w-max md:flex ok-button max-md:my-1 md:!mt-0" href="{{ url }}">{{ trans:open }}</a>
+                      <span class="md:w-3/12 text-xl font-serif">{{ title }}</span>
+                      <span class="md:w-6/12 text-sm text-gray-700">{{ search_snippets:combined:value }}</span>
+                      <a class="max-md:w-max ok-button max-md:my-1 md:!mt-0" href="{{ url }}{{ get:q | text_fragment }}">{{ trans:open }}</a>
                     </li>
                   {{ endif }}
                 {{ /results }}
