--- a/sources/webapp/resources/views/pages/supporters.antlers.html
+++ b/sources/webapp/resources/views/pages/supporters.antlers.html
@@ -21,5 +21,5 @@
     {{ /collection:supporters }}
   </div>
 
-  <p class="text-center mb-4">{{ trans:supporters_organization }}:</p>
+  <p class="text-center mb-4">{{ trans:supporters_organization }}</p>
 </div>
